--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mibdw/bonkiechat",
   "dependencies": {
+    "autolinker": "^0.17.1",
     "express": "^4.10.6",
     "socket.io": "^1.2.1"
   }
