--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.5.1"
   }
 }
